<resources>
    <string name="app_name">Movie Catalog Db</string>
    <string name="movie">Movie</string>
    <string name="tv">Tv Show</string>
    <string name="img_view">imgView</string>
    <string name="description"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </string>
    <string name="img_share">Share</string>
    <string name="budget">$%s</string>
    <string name="tagline">Tagline: </string>
    <string name="none">None</string>
    <string name="production">Production:</string>
    <string name="budgets">Budget:</string>
    <string name="descriptions">Description:</string>
    <string name="foreground_poster">Foreground Poster</string>
    <string name="info_not_resource">Information not Found</string>
    <string name="poster_background">Poster Background</string>
    <string name="poster_main">Poster Main</string>
    <string name="favorite">Favorite</string>
    <string name="overview">Overview</string>
    <string name="popularity">Popularity</string>
    <string name="back_button">Back Button</string>
    <string name="title_favorite">Favorite</string>
    <string name="no_fav">Favorite Kosong</string>
    <string name="something_wrong">Something Wrong!</string>
</resources>