<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"

    app:cardMaxElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgMovieTv"
            android:layout_width="120dp"
            android:layout_height="160dp"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:adjustViewBounds="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/img_view"/>

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/imgMovieTv"
            app:layout_constraintTop_toTopOf="@id/imgMovieTv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            tools:text="name_movie_tv"
            android:textStyle="bold"
            android:textSize="20sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/itemDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="xx-xx-xxxx"
            app:layout_constraintStart_toEndOf="@id/imgMovieTv"
            app:layout_constraintTop_toBottomOf="@id/txt_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Rating"
            app:layout_constraintStart_toEndOf="@id/imgMovieTv"
            app:layout_constraintTop_toBottomOf="@id/itemDate"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/description"
            app:layout_constraintStart_toEndOf="@id/imgMovieTv"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="3"/>

        <ImageButton
            android:id="@+id/imgShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_share"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="4dp"
            android:contentDescription="@string/img_share"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>