<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/topBarCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardMaxElevation="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.flaviofaria.kenburnsview.KenBurnsView
                        android:id="@+id/posterTopBar"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:background="@android:color/darker_gray"
                        android:contentDescription="@string/poster_background"
                        android:scaleType="centerCrop"
                        tools:src="@tools:sample/avatars" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/foreground_poster"
                        tools:src="@drawable/card_detail_foreground" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/titleDetail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            tools:text="Judul Film"
                            android:textStyle="bold"
                            android:textAlignment="textEnd"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toTopOf="@+id/date"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/roundedImageView" />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:textStyle="italic"
                            tools:text="tanggal"
                            android:textAlignment="textEnd"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/roundedImageView" />

                        <TextView
                            android:id="@+id/userScore"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/background_user_score"
                            android:gravity="center"
                            tools:text="100%"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/backButton"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/ic_back"
                            android:contentDescription="@string/back_button"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/roundedImageView"
                            android:layout_width="120dp"
                            android:layout_height="180dp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/subPoster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                android:background="@drawable/poster_placeholder"
                android:contentDescription="@string/poster_main"
                android:elevation="10dp"
                tools:src="@tools:sample/avatars"
                app:layout_constraintBottom_toBottomOf="@+id/topBarCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topBarCardView"
                app:riv_corner_radius="10dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/favoriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/bluegreen"
                android:contentDescription="@string/favorite"
                android:src="@drawable/favorite_selector"
                android:tint="@null"
                app:layout_constraintEnd_toEndOf="@id/title_popularity"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                app:rippleColor="@color/white" />

            <TextView
                android:id="@+id/titleOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subPoster" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/dividerBody"
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                android:src="@android:color/holo_blue_bright"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleOverview"
                app:riv_corner_radius="2dp" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Description"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerBody" />


            <TextView
                android:id="@+id/title_popularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/popularity"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview" />


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/dividerBodyGenre"
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                android:src="@android:color/holo_blue_bright"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_popularity"
                app:riv_corner_radius="2dp" />

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                tools:text="popularity text"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerBodyGenre" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>